added navbar and side bar

--- a/index.html
+++ b/index.html
@@ -6,11 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/cc4b440d87.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css">
     <title>Facebook</title>
 </head>
 <body>
-    
+   <nav class="navbar d-flex align-items-center px-3">
+       <div class="left d-flex align-items-center justify-content-center">
+            <label><img src="/img/fb.svg.png" alt="" class="facebook-logo"></label> 
+            <label><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></label>    
+       </div>
+
+       <div class="middle d-flex align-items-center justify-content-center">
+            <label class="active"><a href=""><i class="fa-solid fa-house"></i></a></label>
+            <label><a href=""><i class="fa-solid fa-tv"></i></a></label>
+            <label><a href=""><i class="fa-solid fa-store"></i></a></label>
+            <label><a href=""><i class="fa-solid fa-people-group"></i></a></label>
+            <label><a href=""><i class="fa-solid fa-gamepad"></i></a></label>
+       </div>
+
+       <div class="right d-flex align-items-center justify-content-center">
+            <label><a href=""><i class="fa-solid fa-bars"></i></a></label>
+            <label class="messenger"><a href=""><i class="fa-brands fa-facebook-messenger"></i></a>
+               <div class="notification">20</div>
+            </label>
+            <label><a href=""><i class="fa-solid fa-bell"></i></a></label>
+            <label><img src="/img/avatar.jpg" alt="pp" class="profile-logo"></label>
+       </div>
+   </nav>
+  
+   <main class="row">
+        <div class="left-wing col-3">
+          <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Hernandez Gustavo</span></div>
+          <div class="item-left"><i class="fa-solid fa-user-group profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Friends</span></div>
+          <div class="item-left"><i class="fa-solid fa-business-time profile-logo-left" style="color: rgb(63, 63, 247);"></i></i><span class="title-left">Most Recent</span></div>
+          <div class="item-left"><i class="fa-solid fa-people-group profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Groups</span></div>
+          <div class="item-left"><i class="fa-solid fa-store profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Marketplace</span></div>
+          <div class="item-left"><i class="fa-solid fa-tv profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Watch</span></div>
+          <div class="item-left"><i class="fa-regular fa-clock profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Memories</span></div>
+          <div class="item-left"><i class="fa-solid fa-bookmark profile-logo-left" style="color: rgb(131, 32, 245);"></i><span class="title-left">Saved</span></div>
+          <div class="item-left"><i class="fa-solid fa-flag profile-logo-left" style="color: rgb(245, 115, 28);"></i><span class="title-left">Pages</span></div>
+          <div class="item-left"><i class="fa-regular fa-stopwatch profile-logo-left"></i><span class="title-left">Events</span></div>
+          <div class="item-left"><i class="fa-solid fa-angle-down profile-logo-left"></i><span class="title-left">See More</span></div>
+           <hr>
+                  
+     </div>
+        <div class="middle-wing col-6">
+               <section class="status-section mt-3">
+
+               </section>
+        </div>
+        <div class="right-wing col-3">
+
+        </div>
+
+   </main>
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
