--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                <div class="notification">20</div>
             </label>
             <label><a href=""><i class="fa-solid fa-bell"></i></a></label>
-            <label><img src="/img/avatar.jpg" alt="pp" class="profile-logo"></label>
+            <label><img src="./img/avatar.jpg" alt="pp" class="profile-logo"></label>
        </div>
    </nav>
   
    <main class="row">
         <div class="left-wing col-3">
-          <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Hernandez Gustavo</span></div>
+          <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Hernandez Gustavo</span></div>
           <div class="item-left"><i class="fa-solid fa-user-group profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Friends</span></div>
           <div class="item-left"><i class="fa-solid fa-business-time profile-logo-left" style="color: rgb(63, 63, 247);"></i></i><span class="title-left">Most Recent</span></div>
           <div class="item-left"><i class="fa-solid fa-people-group profile-logo-left" style="color: rgb(63, 63, 247);"></i><span class="title-left">Groups</span></div>
@@ -74,7 +74,7 @@
                <p class="see-all-link">See all</p>
              </div>
              <div class="accept d-flex justify-content-between align-items-center" style="line-height: 8px;">
-                  <img src="/img/ozil.jpg" alt="" class="friend-pic">
+                  <img src="./img/ozil.jpg" alt="" class="friend-pic">
                   <div class="name-button">
                     <p>Mesut Ozil</p>
                     <div class="buttons d-flex justify-content-between align-items-center">
@@ -102,21 +102,20 @@
                        </div>
                   </div>
                   <div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Hernandez Gustavo</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Fred Mustafa</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Maureen Grace</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Grace Daniels</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Matt Buchi</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Wendy Vera</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Mina Firms</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Sunday Odumodu</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Peter Hero</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">David Henry</span></div>
-                    <div class="item-left"><img src="/img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Bukayo Steven</span></div>
+                    <div class="item-left"><img src="./img/chimpo.png" alt="pp" class="profile-logo-left"><span class="title-left">Hernandez Gustavo</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Fred Mustafa</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Maureen Grace</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Grace Daniels</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Matt Buchi</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Wendy Vera</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Mina Firms</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Sunday Odumodu</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Peter Hero</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">David Henry</span></div>
+                    <div class="item-left"><img src="./img/avatar.jpg" alt="pp" class="profile-logo-left"><span class="title-left">Bukayo Steven</span></div>
                      </div>
              </div>
              
-
         </div>
 
 
