--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <nav class="navbar d-flex align-items-center px-3">
        <div class="left d-flex align-items-center justify-content-center">
-            <label><img src="/img/fb.svg.png" alt="" class="facebook-logo"></label> 
+            <label><img src="./img/fb.svg.png" alt="" class="facebook-logo"></label> 
             <label><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></label>    
        </div>
 
